Fix spacing

--- a/components/SitePicker/sf.css
+++ b/components/SitePicker/sf.css
@@ -102,7 +102,7 @@ html.hp {
 	position: absolute;
 	text-align: center;
 	top: -8px;
-	left: 36%;
+	left: 31%;
 	font-size: 46px;
 	color: red;
 	font-weight: 700;
